ingress/prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
    ingress.bluemix.net/sticky-cookie-services: "serviceName=frontend name=sticky expires=5h path=/ hash=sha1"
    ingress.bluemix.net/client-max-body-size: "size=10m"
spec:
  tls:
  - hosts:
    - annotations.ai
    - www.annotations.ai
    - cloud.annotations.ai
    secretName: annotations-secret
  - hosts:
    - annotations.us-east.containers.appdomain.cloud
    secretName: annotations
  rules:
  - host: cloud.annotations.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
      - path: /docs
        backend:
          serviceName: docs
          servicePort: 80
      - path: /workshops
        backend:
          serviceName: docs
          servicePort: 80
      - path: /demos
        backend:
          serviceName: docs
          servicePort: 80
      - path: /sdks
        backend:
          serviceName: docs
          servicePort: 80
      - path: /docs-assets
        backend:
          serviceName: docs
          servicePort: 80
